infrastructure/clusters/feather-core/rook-fr01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph-fr01
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
